Add sharing vehicles
